--- a/deploy/olm-catalog/dev/7.13.1-1/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.13.1-1/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -7,7 +7,7 @@ metadata:
     categories: Integration & Delivery
     certified: "false"
     containerImage: quay.io/kiegroup/kie-cloud-operator:7.13.1
-    createdAt: "2022-07-27 13:24:10"
+    createdAt: "2022-08-23 15:17:20"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -20,7 +20,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.13.1-1-dev-6gdbz6zszf
+  name: businessautomation-operator.7.13.1-1-dev-npsts6dgjr
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -191,7 +191,7 @@ spec:
                 - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.13.1
                   value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
                 - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.13.1
-                  value: registry.redhat.io/rhscl/postgresql-10-rhel7:latest
+                  value: registry.redhat.io/rhscl/postgresql-12-rhel7:latest
                 - name: RELATED_IMAGE_DATAGRID_IMAGE_7.13.1
                   value: registry.redhat.io/datagrid/datagrid-8-rhel8:1.3
                 - name: RELATED_IMAGE_BROKER_IMAGE_7.13.1
@@ -400,7 +400,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.13.1-1-dev-6gdbz6zszf
+    operated-by: businessautomation-operator.7.13.1-1-dev-npsts6dgjr
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -416,5 +416,5 @@ spec:
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.13.1-1-dev-6gdbz6zszf
-  version: 7.13.1-1+6gdbz6zszf
+      operated-by: businessautomation-operator.7.13.1-1-dev-npsts6dgjr
+  version: 7.13.1-1+npsts6dgjr
