--- a/deploy/olm-catalog/dev/7.13.4-3/manifests/businessautomation-operator.clusterserviceversion.yaml
+++ b/deploy/olm-catalog/dev/7.13.4-3/manifests/businessautomation-operator.clusterserviceversion.yaml
@@ -6,8 +6,8 @@ metadata:
     capabilities: Seamless Upgrades
     categories: Integration & Delivery
     certified: "false"
-    containerImage: quay.io/kiegroup/kie-cloud-operator:7.13.5
-    createdAt: "2023-10-26 16:13:57"
+    containerImage: quay.io/kiegroup/kie-cloud-operator:7.13.4
+    createdAt: "2023-10-26 15:37:11"
     description: Deploys and manages Red Hat Process Automation Manager and Red Hat
       Decision Manager environments.
     operators.openshift.io/infrastructure-features: '["Disconnected"]'
@@ -20,7 +20,7 @@ metadata:
     operator-businessautomation: "true"
     operatorframework.io/arch.amd64: supported
     operatorframework.io/os.linux: supported
-  name: businessautomation-operator.7.13.5-1-dev-zp29l6plhb
+  name: businessautomation-operator.7.13.4-3-dev-rqzv5r2frh
   namespace: placeholder
 spec:
   apiservicedefinitions: {}
@@ -172,30 +172,6 @@ spec:
                   value: "true"
                 - name: DEBUG
                   value: "false"
-                - name: RELATED_IMAGE_PAM_KIESERVER_IMAGE_7.13.5
-                  value: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.13.5
-                - name: RELATED_IMAGE_PAM_CONTROLLER_IMAGE_7.13.5
-                  value: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.13.5
-                - name: RELATED_IMAGE_PAM_BC_IMAGE_7.13.5
-                  value: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.13.5
-                - name: RELATED_IMAGE_PAM_BC_MONITORING_IMAGE_7.13.5
-                  value: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.13.5
-                - name: RELATED_IMAGE_PAM_SMARTROUTER_IMAGE_7.13.5
-                  value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.13.5
-                - name: RELATED_IMAGE_PAM_PROCESS_MIGRATION_IMAGE_7.13.5
-                  value: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.13.5
-                - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_7.13.5
-                  value: registry.redhat.io/rhpam-7/rhpam-dashbuilder-rhel8:7.13.5
-                - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.13.5
-                  value: registry.redhat.io/openshift4/ose-cli:v4.12
-                - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.13.5
-                  value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
-                - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.13.5
-                  value: registry.redhat.io/rhscl/postgresql-13-rhel7:latest
-                - name: RELATED_IMAGE_DATAGRID_IMAGE_7.13.5
-                  value: registry.redhat.io/datagrid/datagrid-8-rhel8:1.3
-                - name: RELATED_IMAGE_BROKER_IMAGE_7.13.5
-                  value: registry.redhat.io/amq7/amq-broker-rhel8:7.9
                 - name: RELATED_IMAGE_PAM_KIESERVER_IMAGE_7.13.4
                   value: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.13.4
                 - name: RELATED_IMAGE_PAM_CONTROLLER_IMAGE_7.13.4
@@ -220,6 +196,30 @@ spec:
                   value: registry.redhat.io/datagrid/datagrid-8-rhel8:1.3
                 - name: RELATED_IMAGE_BROKER_IMAGE_7.13.4
                   value: registry.redhat.io/amq7/amq-broker-rhel8:7.9
+                - name: RELATED_IMAGE_PAM_KIESERVER_IMAGE_7.13.3
+                  value: registry.redhat.io/rhpam-7/rhpam-kieserver-rhel8:7.13.3
+                - name: RELATED_IMAGE_PAM_CONTROLLER_IMAGE_7.13.3
+                  value: registry.redhat.io/rhpam-7/rhpam-controller-rhel8:7.13.3
+                - name: RELATED_IMAGE_PAM_BC_IMAGE_7.13.3
+                  value: registry.redhat.io/rhpam-7/rhpam-businesscentral-rhel8:7.13.3
+                - name: RELATED_IMAGE_PAM_BC_MONITORING_IMAGE_7.13.3
+                  value: registry.redhat.io/rhpam-7/rhpam-businesscentral-monitoring-rhel8:7.13.3
+                - name: RELATED_IMAGE_PAM_SMARTROUTER_IMAGE_7.13.3
+                  value: registry.redhat.io/rhpam-7/rhpam-smartrouter-rhel8:7.13.3
+                - name: RELATED_IMAGE_PAM_PROCESS_MIGRATION_IMAGE_7.13.3
+                  value: registry.redhat.io/rhpam-7/rhpam-process-migration-rhel8:7.13.3
+                - name: RELATED_IMAGE_PAM_DASHBUILDER_IMAGE_7.13.3
+                  value: registry.redhat.io/rhpam-7/rhpam-dashbuilder-rhel8:7.13.3
+                - name: RELATED_IMAGE_OSE_CLI_IMAGE_7.13.3
+                  value: registry.redhat.io/openshift4/ose-cli:v4.12
+                - name: RELATED_IMAGE_MYSQL_PROXY_IMAGE_7.13.3
+                  value: registry.redhat.io/rhscl/mysql-80-rhel7:latest
+                - name: RELATED_IMAGE_POSTGRESQL_PROXY_IMAGE_7.13.3
+                  value: registry.redhat.io/rhscl/postgresql-13-rhel7:latest
+                - name: RELATED_IMAGE_DATAGRID_IMAGE_7.13.3
+                  value: registry.redhat.io/datagrid/datagrid-8-rhel8:1.3
+                - name: RELATED_IMAGE_BROKER_IMAGE_7.13.3
+                  value: registry.redhat.io/amq7/amq-broker-rhel8:7.9
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_LATEST
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:latest
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.12
@@ -228,7 +228,7 @@ spec:
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.11
                 - name: RELATED_IMAGE_OAUTH_PROXY_IMAGE_4.10
                   value: registry.redhat.io/openshift4/ose-oauth-proxy:v4.10
-                image: quay.io/kiegroup/kie-cloud-operator:7.13.5
+                image: quay.io/kiegroup/kie-cloud-operator:7.13.4
                 imagePullPolicy: Always
                 name: business-automation-operator
                 resources: {}
@@ -403,7 +403,7 @@ spec:
   - operator
   labels:
     alm-owner-businessautomation: businessautomation-operator
-    operated-by: businessautomation-operator.7.13.5-1-dev-zp29l6plhb
+    operated-by: businessautomation-operator.7.13.4-3-dev-rqzv5r2frh
   links:
   - name: Product Page
     url: https://access.redhat.com/products/red-hat-process-automation-manager
@@ -415,9 +415,9 @@ spec:
   maturity: dev
   provider:
     name: Red Hat
-  replaces: businessautomation-operator.7.13.4-3
+  replaces: businessautomation-operator.7.13.4-2
   selector:
     matchLabels:
       alm-owner-businessautomation: businessautomation-operator
-      operated-by: businessautomation-operator.7.13.5-1-dev-zp29l6plhb
-  version: 7.13.5-1+zp29l6plhb
+      operated-by: businessautomation-operator.7.13.4-3-dev-rqzv5r2frh
+  version: 7.13.4-3+rqzv5r2frh
